--- a/src/index.scss
+++ b/src/index.scss
@@ -110,7 +110,7 @@ body {
   input {
     border-radius: 30px;
     border: 3px solid #8F9ABC;
-    width: 250px;
+    max-width: 250px;
     height: 30px;
     padding: 0 20px 0 20px;
   }
