--- a/src/index.scss
+++ b/src/index.scss
@@ -144,7 +144,7 @@ body {
 .to-do-item-list-container {
   max-height: 300px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-width: 350px;
 }
 
